added some tests and comments